--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,14 +8,17 @@ jobs:
           BUNDLE_JOBS: 3
           BUNDLE_RETRY: 3
           BUNDLE_PATH: vendor/bundle
-          PGHOST: 127.0.0.1
-          PGUSER: circleci-demo-ruby
+          MYSQL_DB: music_manager_test
+          MYSQL_HOST: 127.0.0.1
+          MYSQL_USER: root
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_PASSWORD:
           RAILS_ENV: test
-      - image: circleci/postgres:9.5-alpine
-        environment:
-          POSTGRES_USER: circleci-demo-ruby
-          POSTGRES_DB: music-manager
-          POSTGRES_PASSWORD: ""
+      - image: mysql:5.7
+          command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin --innodb-large-prefix=true --innodb-file-format=Barracuda
+          environment:
+            MYSQL_USER: root
+            MYSQL_ALLOW_EMPTY_PASSWORD: true
     steps:
       - checkout
 
@@ -46,7 +49,9 @@ jobs:
 
       - run:
           name: Database setup
-          command: bin/rails db:schema:load --trace
+          command: |
+            bundle exec rake db:create db:schema:load --trace
+            bundle exec rake db:migrate
 
       # Run rspec in parallel
       - run:
