--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,11 @@ jobs:
     docker:
       - image: circleci/ruby:2.4-node
         environment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          RAILS_ENV: test
       - image: circleci/mysql:5.7.20
         environment:
-        MYSQL_ROOT_PASSWORD: ''
+        MYSQL_USER: root
+        MYSQL_ALLOW_EMPTY_PASSWORD: true
         MYSQL_DATABASE: music_manager_test
     steps:
       - checkout
@@ -21,8 +22,8 @@ jobs:
       # Restore bundle cache
       - restore_cache:
           keys:
-            - rails-demo-bundle-v2-{{ checksum "Gemfile.lock" }}
-            - rails-demo-bundle-v2-
+            - music-manager-bundle-v2-{{ checksum "Gemfile.lock" }}
+            - music-manager-bundle-v2-
 
       - run:
           name: Bundle Install
@@ -30,7 +31,7 @@ jobs:
 
       # Store bundle cache
       - save_cache:
-          key: rails-demo-bundle-v2-{{ checksum "Gemfile.lock" }}
+          key: music-manager-bundle-v2-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
 
