--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@ default: &default
   pool: 5
   timeout: 5000
   username: root
-  password:
+  password: <%= ENV['MYSQL_PASSWORD'] %>
   socket: /var/run/mysqld/mysqld.sock
 
 development:
