--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,10 @@ jobs:
       - image: circleci/ruby:2.4-node
         environment:
           RAILS_ENV: test
-          MYSQL_PASSWORD: mysql_password
       - image: circleci/mysql:5.7.20
         environment:
-          MYSQL_PASSWORD: mysql_password
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_USER: root
     steps:
       - checkout
 
