--- a/config/database.yml
+++ b/config/database.yml
@@ -11,6 +11,7 @@ default: &default
   pool: 5
   timeout: 5000
   username: root
+  host: 127.0.0.1
   socket: /var/run/mysqld/mysqld.sock
 
 development:
