added rspec formatter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,5 +51,12 @@ jobs:
           name: Run rspec in parallel
           command: |
             bundle exec rspec --profile 10 \
+                              --format RspecJunitFormatter \
                               --out test_results/rspec.xml \
+                              --format progress \
+                              $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
 
+
+      # Save test results for timing analysis
+      - store_test_results:
+          path: test_results
